<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="10dp"
    tools:context="com.example.finalgithubappsubmission.fragments.ColorDialogFragment">
    <SeekBar
        android:id="@+id/seek_bar_red"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:max="255"
        android:progress="100"
        android:thumbTint="@android:color/holo_red_dark"
        android:progressTint="@android:color/holo_red_dark"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_red" />

    <TextView
        android:id="@+id/tv_red"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/red"
        app:layout_constraintEnd_toEndOf="@+id/seek_bar_red"
        app:layout_constraintStart_toStartOf="@+id/seek_bar_red"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_green"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/green"
        app:layout_constraintEnd_toEndOf="@+id/seek_bar_green"
        app:layout_constraintStart_toStartOf="@+id/seek_bar_green"
        app:layout_constraintTop_toBottomOf="@+id/seek_bar_red" />

    <SeekBar
        android:id="@+id/seek_bar_green"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:thumbTint="@android:color/holo_green_light"
        android:progressTint="@android:color/holo_green_light"
        android:layout_marginTop="8dp"
        android:progress="125"
        android:layout_marginEnd="16dp"
        android:max="255"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_green" />

    <TextView
        android:id="@+id/tv_blue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/blue"
        app:layout_constraintEnd_toEndOf="@+id/seek_bar_blue"
        app:layout_constraintStart_toStartOf="@+id/seek_bar_blue"
        app:layout_constraintTop_toBottomOf="@+id/seek_bar_green" />

    <SeekBar
        android:id="@+id/seek_bar_blue"
        android:layout_width="0dp"
        tools:progress="100"
        android:max="255"
        android:thumbTint="@android:color/holo_blue_light"
        android:progressTint="@android:color/holo_blue_light"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_blue" />

    <Button
        android:id="@+id/btn_abort"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/cancel"
        app:layout_constraintEnd_toStartOf="@+id/btn_apply"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/img_color_preview" />

    <Button
        android:id="@+id/btn_apply"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/apply"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/btn_abort"
        app:layout_constraintTop_toTopOf="@+id/btn_abort" />

    <ImageView
        android:id="@+id/img_color_preview"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/seek_bar_blue"
        tools:src="@color/colorPrimary" />
</androidx.constraintlayout.widget.ConstraintLayout>